fix for chrome root page, bg img was not displaying properly map canvas z-index(999) was preventing clicking on links, move to -1 nav is showable on all pages, moved forward z-index to overlay over map on show pg

--- a/app/assets/stylesheets/base_style.css
+++ b/app/assets/stylesheets/base_style.css
@@ -7,12 +7,6 @@ body {
        -o-background-size: cover;
           background-size: cover;
   font-family: Helvetica, Arial, san-serif;
-  margin: 0;
-  padding: 0;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 .navbar-links {
@@ -26,11 +20,11 @@ body {
   opacity: 0.75;
 }
 
-button.navbar-button {
-  z-index: 100;
+.navbar-button {
   position: fixed;
+  z-index: 100;
   left: 96%;
-  margin-top: -4.5%;
+  margin-top: 1%;
   height: 40px;
   width: 40px;
   opacity: 0.65;
@@ -48,10 +42,9 @@ button.navbar-button {
   height: 2px;
 }
 
-.main-links {
-  padding: 10px;
-}
-
+.main-links { padding: 10px; }
+.main-links li a { text-decoration: none; }
+.main-links hr { margin: 10px -10px; width: 130%; }
 .main-links li {
   list-style-type: none;
   text-align: center;
@@ -59,22 +52,9 @@ button.navbar-button {
   text-transform: uppercase;
 }
 
-.main-links li a {
-  text-decoration: none;
-}
-
-.main-links hr {
-  margin: 10px -10px;
-  width: 130%;
-}
-/*
-canvas {
-  display: block;
-}*/
-
 canvas#canvas {
-  position: fixed;
-  z-index: -999;
+  z-index: -1;
+  position: absolute;
   top: 0;
   left: 0;
   height: 100%;
@@ -93,15 +73,23 @@ canvas#canvas {
 @media (max-width: 769px) {
    .navbar-button {
     left: 90%;
-    margin-top: -8%;
+    margin-top: 1%;
   }
 }
 
 @media (max-width: 361px) {
   .navbar-button {
-    left: 70%;
-    top: 10%;
+    left: 85%;
+    top: 1%;
     height: 2.5em;
     width: 2.5em;
+  }
+  
+  .navbar-links {
+    position: fixed;
+    z-index: 99;
+    height: 100%;
+    width: 15%;
+    left: 101%;
   }
 }
